--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "patch": "npm version patch && npm run tag",
     "minor": "npm version minor && npm run tag",
     "major": "npm version major && npm run tag",
-    "tag": "git tag -a v$(node -e \\\"require('./package.json').version\\\") -m 'v$(node -e \\\"require('./package.json').version\\\")' && git push origin --tags",
+    "tag": "git tag -a v$(node -e \\\"require('./package.json').version\\\") -m 'v$(node -e \\\"require(`./package.json`).version\\\")' && git push origin --tags",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
