--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "discord-hono",
-  "version": "0.1.5",
+  "version": "0.1.4",
   "description": "Edge Functions module for interacting with the Discord API",
   "author": "Luis (https://github.com/LuisFun)",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "patch": "npm version patch && npm run tag",
-    "minor": "npm version minor && npm run tag",
-    "major": "npm version major && npm run tag",
-    "tag": "git tag -a v$(node -e \\\"require('./package.json').version\\\") -m 'v$(node -e \\\"require(`./package.json`).version\\\")' && git push origin --tags",
+    "patch": "npm version patch && npm run tag && git push origin --tags",
+    "minor": "npm version minor && npm run tag && git push origin --tags",
+    "major": "npm version major && npm run tag && git push origin --tags",
+    "tag": "git tag -a v$(node -e \\\"require('./package.json').version\\\") -m 'v$(node -e \\\"require(`./package.json`).version\\\")'",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
