--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "patch": "npm version patch && npm run tag && git push origin --tags",
-    "minor": "npm version minor && npm run tag && git push origin --tags",
-    "major": "npm version major && npm run tag && git push origin --tags",
-    "tag": "git tag -a v$(node -e \\\"require('./package.json').version\\\") -m 'v$(node -e \\\"require(`./package.json`).version\\\")'",
+    "patch": "npm version patch && npm run tag",
+    "minor": "npm version minor && npm run tag",
+    "major": "npm version major && npm run tag",
+    "tag": "powershell -Command \"git tag -a v$(node -p -e \\\"require('./package.json').version\\\") -m 'v$(node -p -e \\\"require('./package.json').version\\\")' && git push origin --tags\"",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
