--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,8 @@
 name: Publish Package to npmjs
 on: 
-  release: 
-    types: [published]
+  push: 
+    tags:
+      - '*'
 jobs: 
   build: 
     runs-on: ubuntu-latest
