--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,4 +7,4 @@ updates:
     ignore:
       - dependency-name: "*"
         update-types:
-          ["version-update:semver-patch", "version-update:semver-minor"]
+          ["version-update:semver-patch"]
