--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.2",
   "description": "Edge Functions module for interacting with the Discord API",
   "author": "Luis (https://github.com/LuisFun)",
+  "homepage": "https://github.com/LuisFun/discord-hono",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
