--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,5 +6,4 @@ updates:
       interval: "weekly"
     ignore:
       - dependency-name: "*"
-        update-types:
-          ["version-update:semver-patch"]
+        update-types: ["version-update:semver-patch"]
