--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,19 +1,19 @@
 name: Publish Package to npmjs
-on: 
-  push: 
+on:
+  push:
     tags:
-      - '*'
-jobs: 
-  build: 
+      - "*"
+jobs:
+  build:
     runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v4 
-      - uses: actions/setup-node@v3 
-        with: 
-          node-version: '20.x' 
-          registry-url: 'https://registry.npmjs.org' 
-      - run: npm ci 
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+          registry-url: "https://registry.npmjs.org"
+      - run: npm ci
       - run: npx tsc
-      - run: npm publish 
-        env: 
+      - run: npm publish
+        env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
