chore: fix prettier

--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "patch": "npm version patch && git push --follow-tags",
-    "minor": "npm version minor && git push --follow-tags",
-    "major": "npm version major && git push --follow-tags",
+    "patch": "prettier . --write && npm version patch && git push --follow-tags",
+    "minor": "prettier . --write && npm version minor && git push --follow-tags",
+    "major": "prettier . --write && npm version major && git push --follow-tags",
     "build": "tsc",
+    "prettier": "prettier . --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prettier": {
-    "printWidth": 140,
+    "printWidth": 120,
     "semi": false,
     "arrowParens": "avoid"
   },
