chore: prettier "singleQuote": true

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "prettier": {
     "printWidth": 120,
     "semi": false,
+    "singleQuote": true,
     "arrowParens": "avoid"
   },
   "devDependencies": {
