--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     /* Language and Environment */
     "target": "ES2020",
     /* Modules */
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     /* Emit */
     "declaration": true,
     "outDir": "./dist",
     /* Interop Constraints */
-    "esModuleInterop": true,
+    //"esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     /* Type Checking */
     "strict": true,
