chore: fix build script

--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
     "patch": "prettier . --write && npm version patch && git push --follow-tags",
     "minor": "prettier . --write && npm version minor && git push --follow-tags",
     "major": "prettier . --write && npm version major && git push --follow-tags",
-    "build:ts": "tsc --emitDeclarationOnly --declaration",
-    "build:cjs": "esbuild --bundle ./src/index.ts --outfile=./dist/index.cjs --format=cjs",
-    "build:esm": "esbuild --bundle ./src/index.ts --outfile=./dist/index.mjs --format=esm",
-    "build": "rimraf dist && npm run build:ts && npm run build:cjs && npm run build:esm",
+    "esbuild:cjs": "esbuild --bundle ./src/index.ts --outfile=./dist/index.cjs --format=cjs",
+    "esbuild:esm": "esbuild --bundle ./src/index.ts --outfile=./dist/index.mjs --format=esm",
+    "build": "rimraf dist && tsc && npm run esbuild:cjs && npm run esbuild:esm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prettier": {
