--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-hono",
   "version": "0.4.15",
-  "description": "Edge Functions module for interacting with the Discord API",
+  "description": "Cloudflare Workers module for interacting with the Discord API",
   "author": "Luis (https://github.com/LuisFun)",
   "homepage": "https://github.com/LuisFun/discord-hono",
   "license": "MIT",
