--- a/biome.jsonc
+++ b/biome.jsonc
@@ -18,10 +18,10 @@
     "rules": {
       "recommended": true,
       "style": {
-        "noParameterAssign": "off" // 引数に代入を許容（混乱の可能性） 推奨 "warn"
+        "noParameterAssign": "off" // To reuse the arguments
       },
       "suspicious": {
-        "noExplicitAny": "off" // anyを許容 推奨 "warn"
+        "noExplicitAny": "off" // Allow type any
       }
     }
   },
