--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig to read more about this file */
     /* Language and Environment */
     "target": "ES2020",
     /* Modules */
@@ -9,7 +8,7 @@
     /* Emit */
     "declaration": true,
     "emitDeclarationOnly": true,
-    "outDir": "./dist",
+    "outDir": "./dist/types",
     /* Interop Constraints */
     "forceConsistentCasingInFileNames": true,
     /* Type Checking */
@@ -17,10 +16,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    //"noUncheckedIndexedAccess": true,
-    /* Completeness */
-    "skipLibCheck": true
+    "noFallthroughCasesInSwitch": true
+    //"noUncheckedIndexedAccess": true
   },
   "include": ["src/**/*.ts"]
 }
