chore: fix npm run scripts

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "patch": "npm run fix && npm run build && npm version patch && git push --follow-tags",
     "minor": "npm run fix && npm run build && npm version minor && git push --follow-tags",
     "major": "npm run fix && npm run build && npm version major && git push --follow-tags",
-    "build:dts": "tsc && dts-bundle-generator dist/types/index.d.ts -o dist/index.d.ts && rimraf dist/types",
-    "build:esm": "esbuild src/index.ts --outdir=dist --bundle --format=esm",
-    "build": "rimraf dist && npm run build:dts && npm run build:esm",
+    "build:dts": "tsc && dts-bundle-generator ./dist/types/index.d.ts -o ./dist/index.d.ts && rimraf ./dist/types",
+    "build:esm": "esbuild ./src/index.ts --outdir=./dist --bundle --platform=node --format=esm",
+    "build": "rimraf ./dist && npm run build:dts && npm run build:esm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
