--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "type": "module",
   "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "fix": "npx @biomejs/biome check --apply .",
