--- a/package.json
+++ b/package.json
@@ -16,24 +16,20 @@
   "type": "module",
   "exports": "./dist/index.js",
   "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "fix": "npx @biomejs/biome check --apply .",
     "fix:unsafe": "npx @biomejs/biome check --apply-unsafe .",
+    "build": "tsup ./src/index.ts --format esm --target es2022 --dts --clean && attw -P . --ignore-rules cjs-resolves-to-esm",
     "patch": "npm run fix && npm run build && npm version patch && git push --follow-tags",
     "minor": "npm run fix && npm run build && npm version minor && git push --follow-tags",
     "major": "npm run fix && npm run build && npm version major && git push --follow-tags",
-    "build:dts": "tsc && dts-bundle-generator ./dist/types/index.d.ts -o ./dist/index.d.ts && rimraf ./dist/types",
-    "build:esm": "esbuild ./src/index.ts --outdir=./dist --bundle --platform=node --format=esm",
-    "build": "rimraf ./dist && npm run build:dts && npm run build:esm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.15.3",
     "@biomejs/biome": "1.7.1",
     "discord-api-types": "^0.37.83",
-    "dts-bundle-generator": "^9.5.1",
-    "esbuild": "^0.20.2",
-    "rimraf": "^5.0.5",
+    "tsup": "^8.0.2",
     "typescript": "^5.4.5"
   }
 }
