--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "discord-hono",
   "version": "0.6.1",
   "description": "This module enables you to easily build a Discord Bot that runs on Cloudflare workers",
-  "author": "Luis (https://github.com/LuisFun)",
-  "homepage": "https://github.com/LuisFun/discord-hono",
+  "author": "Luis (https://github.com/luisfun)",
+  "homepage": "https://github.com/luisfun/discord-hono",
   "license": "MIT",
   "keywords": [
     "discord-hono",
