--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-hono",
-  "version": "0.8.5",
+  "version": "0.9.0",
   "description": "This library enables you to easily build Discord bots on Cloudflare Workers",
   "author": "Luis (https://github.com/luisfun)",
   "homepage": "https://github.com/luisfun/discord-hono",
@@ -15,7 +15,9 @@
   ],
   "type": "module",
   "main": "dist/index.js",
-  "engines": { "node": ">=18.4.0" },
+  "engines": {
+    "node": ">=18.4.0"
+  },
   "scripts": {
     "fix": "biome check --write . && tsc",
     "fix:unsafe": "biome check --write --unsafe . && tsc",
