chore: tsconfig add tsc compile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     /* Completeness */
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    /* tsc Compile */
+    //"allowImportingTsExtensions": true,
+    "rewriteRelativeImportExtensions": true,
+    "verbatimModuleSyntax": true
   },
   "include": ["src"]
 }
