--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "^0.17.2",
+    "@arethetypeswrong/cli": "^0.17.3",
     "@biomejs/biome": "1.9.4",
     "@discordjs/builders": "^1.10.0",
-    "discord-api-types": "^0.37.115",
+    "discord-api-types": "^0.37.117",
     "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.4"
   }
 }
