--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "node": ">=18.4.0"
   },
   "scripts": {
-    "fix": "biome check --write . && tsc",
-    "fix:unsafe": "biome check --write --unsafe . && tsc",
+    "fix": "biome check --write .",
+    "fix:unsafe": "biome check --write --unsafe .",
+    "test": "tsc && vitest run --coverage",
     "build": "tsup src/index.ts --format esm --dts --clean && attw -P . --ignore-rules cjs-resolves-to-esm",
-    "patch": "npm run fix && npm run build && npm version patch && git push --follow-tags",
-    "minor": "npm run fix && npm run build && npm version minor && git push --follow-tags",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "patch": "npm run test && npm run build && npm version patch && git push --follow-tags",
+    "minor": "npm run test && npm run build && npm version minor && git push --follow-tags"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.3",
     "@biomejs/biome": "1.9.4",
     "@discordjs/builders": "^1.10.0",
+    "@vitest/coverage-v8": "^3.0.4",
     "discord-api-types": "^0.37.117",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3",
