--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,13 +1,16 @@
-name: ci
+name: Coverage
 on:
   push:
     branches: [main]
+    paths:
+      - 'src/**'
   pull_request:
     branches: [main]
+    paths:
+      - 'src/**'
 
 jobs:
   coverage:
-    name: Coverage
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
