--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,3 +20,4 @@ jobs:
       - run: npm ci
       - run: npm run test
       - uses: codecov/codecov-action@v5
+        if: github.event_name == 'push'
