--- a/.github/workflows/tag-generator.yml
+++ b/.github/workflows/tag-generator.yml
@@ -16,9 +16,13 @@ on:
         - preminor
         - premajor
 
+permissions: read-all
+
 jobs:
   create-tag:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
