--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,4 +17,4 @@ jobs:
           node-version: 'lts/*'
       - run: npm ci
       - run: npm run test
-      - uses: codecov/codecov-action@v5
+      - uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
