--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,10 +4,6 @@ on:
     branches: [main]
     paths:
       - 'src/**'
-  pull_request:
-    branches: [main]
-    paths:
-      - 'src/**'
 
 permissions: read-all
 
@@ -21,5 +17,4 @@ jobs:
           node-version: 'lts/*'
       - run: npm ci
       - run: npm run test
-      - uses: codecov/codecov-action@v5
-        if: github.event_name == 'push'
+      - uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
