chore: update pkg

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    //"erasableSyntaxOnly": true, // ts 5.8
+    "erasableSyntaxOnly": true,
     /* Completeness */
     "skipLibCheck": true
   },
